[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Models/Weapons/Shotguns/CyberShotgun/CyberShotgun.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/TrackBot/Weapons/CyberShotgun/CyberShotgun.gd" type="Script" id=2]

[node name="CyberShotgun" type="Spatial"]
script = ExtResource( 2 )

[node name="CyberShotgun" parent="." instance=ExtResource( 1 )]

[node name="Mount_2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.16, 0, 0 )

[node name="Mount_1" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.16, 0, 0 )

[node name="Bullet_Spawns" type="Spatial" parent="."]

[node name="Bullet_Spawn_1" type="Position3D" parent="Bullet_Spawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0962149, 1.76498 )

[node name="Bullet_Spawn_2" type="Position3D" parent="Bullet_Spawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0274157, 1.76498 )

[node name="Bullet_Spawn_3" type="Position3D" parent="Bullet_Spawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0414264, 1.76498 )

[node name="Bullet_Spawn_4" type="Position3D" parent="Bullet_Spawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.107871, 1.76498 )
